cleaning up code climate. Fix spacing on chip.

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -274,7 +274,7 @@ h4 {
     background: #D32F2F;
     color: white;
      }
-  .md-chip .md-chip-remove-container {
+  .md-chips .md-chip .md-chip-remove-container {
     position: absolute;
     right: 4px;
     top: 4px;
@@ -302,10 +302,11 @@ h4 {
         color: white;
         fill: white; }
       .md-chip .md-chip-remove-container button.includechip:hover, .include-chips .md-chip .md-chip-remove-container button.includechip:focus {
-        background: #81C784 }
-        
+        background: #81C784;
+      }        
       .md-chip .md-chip-remove-container button.excludechip:hover, .include-chips .md-chip .md-chip-remove-container button.excludechip:focus {
-        background: #E57373 }
+        background: #E57373;
+      }
         
 .color-red{
     color: red;
